2012-12-12  Andreas Kupries <andreask@activestate.com>

	* pkgIndex.tcl.in: Long overdue bump of vfs::zip to
	* library/zipvfs.tcl: 1.0.4. (Since 2009-02-07 or earlier).

	* configure.in: Long overdue bump to version 1.4.2.
	* configure: (1.4.1 was in 2009-02-07). Regenerated.
	  Please bump the patchlevel for any future bug fixes,
	  of the relevant sub-package(s).

2012-07-12  Wojciech Kocjan <zoro2@users.sourceforge.net>

	* zipvfs.tcl: Fix for Tcl 8.6 not properly streaming large files with
	very big compression ratio, bug 3542959

2012-07-04  Wojciech Kocjan <zoro2@users.sourceforge.net>

	* zipvfs.tcl: Fix for streaming not working properly in certain zip
	files; refactoring of zip::Data to reuse header parsing code for streams

2012-03-15  Wojciech Kocjan <zoro2@users.sourceforge.net>

	* zipvfs.tcl: Fix for zip symlinks not supported anymore, bug 3505283

2011-11-28  Steve Huntley  <stephen.huntley@alum.mit.edu>

	* vfslib.tcl: Applied contributed patch for bug 3412801.  Clean up watch
	timers for memchan vfs.

2011-11-28  Steve Huntley  <stephen.huntley@alum.mit.edu>

	* zipvfs.tcl: Applied contributed patch for bug 3395782.  Enables 
	extraction of contents of zip files created using Fossil.


2011-11-28  Steve Huntley  <stephen.huntley@alum.mit.edu>

	* zipvfs.tcl: Reverted bug fix for 3224057.  See bug ID 3303287.


2011-04-28  Steve Huntley  <stephen.huntley@alum.mit.edu>

	* zipvfs.tcl: Added contributed patch to speed up zipvfs directory 
	listing.  See patch 3279418.

2011-03-30  Steve Huntley  <stephen.huntley@alum.mit.edu>

	* vfslib.tcl, zipvfs.tcl: Added contributed patches to fix bugs 3160686
	& 3224057.

2011-03-30  Steve Huntley  <stephen.huntley@alum.mit.edu>

	* globfind.tcl: Updated to latest file version (1.5.3).

2010-12-31  Steve Huntley  <stephen.huntley@alum.mit.edu>

	* vfs.tcl: Removed requirement for 8.6 for sourcing of vfslib.tcl, since
	that file contains 8.5-relevant utils for chan command.  Vfslib.tcl